PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/async_before_line.pf
module DataStructures{

    fun foo():Int {
        return 4
    }

    fun main() : Int{

        async erg Int = foo()

        return 0

    }
}